--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
   },
   "autoload": {
     "psr-4": {
-      "ErsoyInsider\\NewrelicCustomEvent\\": "src"
+      "ErsoyInsider\\NewrelicCustomEvent\\": "src/"
     }
   }
 }
