--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
   },
   "require-dev": {
     "mockery/mockery": "^1.0",
-    "phpunit/phpunit": "^6"
+    "phpunit/phpunit": "^6",
+    "laravel/lumen-framework": "^5.5"
   },
   "autoload": {
     "psr-4": {
